// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > release > deleteRelease > success 1`] = `
{
  "_id": {
    "toString": [Function],
  },
  "aggregate": [MockFunction],
  "append": [MockFunction],
  "at": [MockFunction],
  "bulkWrite": [MockFunction],
  "delete": [MockFunction] {
    "calls": [
      [
        undefined,
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": [Circular],
      },
    ],
  },
  "deleteMany": [MockFunction],
  "deleteOne": [MockFunction],
  "find": [MockFunction],
  "findById": [MockFunction],
  "findByIdAndDelete": [MockFunction],
  "findOne": [MockFunction],
  "findOneAndDelete": [MockFunction],
  "findOneAndUpdate": [MockFunction],
  "group": [MockFunction],
  "id": "mock-id",
  "insertMany": [MockFunction],
  "lean": [MockFunction],
  "limit": [MockFunction],
  "lookup": [MockFunction],
  "markModified": [MockFunction],
  "match": [MockFunction],
  "save": [MockFunction],
  "sort": [MockFunction],
  "toObject": [MockFunction],
  "update": [MockFunction],
  "updateMany": [MockFunction],
  "updateOne": [MockFunction],
}
`;

exports[`services > release > deleteReleases > success 1`] = `
[
  {
    "_id": {
      "toString": [Function],
    },
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "at": [MockFunction],
    "bulkWrite": [MockFunction],
    "delete": [MockFunction] {
      "calls": [
        [
          undefined,
        ],
        [
          undefined,
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
        {
          "type": "return",
          "value": {
            "_id": {
              "toString": [Function],
            },
            "aggregate": [MockFunction],
            "append": [MockFunction],
            "at": [MockFunction],
            "bulkWrite": [MockFunction],
            "delete": [MockFunction] {
              "calls": [
                [
                  undefined,
                ],
                [
                  undefined,
                ],
              ],
              "results": [Circular],
            },
            "deleteMany": [MockFunction],
            "deleteOne": [MockFunction],
            "find": [MockFunction],
            "findById": [MockFunction],
            "findByIdAndDelete": [MockFunction],
            "findOne": [MockFunction],
            "findOneAndDelete": [MockFunction],
            "findOneAndUpdate": [MockFunction],
            "group": [MockFunction],
            "id": "mock-id",
            "insertMany": [MockFunction],
            "lean": [MockFunction],
            "limit": [MockFunction],
            "lookup": [MockFunction],
            "markModified": [MockFunction],
            "match": [MockFunction],
            "save": [MockFunction],
            "sort": [MockFunction],
            "toObject": [MockFunction],
            "update": [MockFunction],
            "updateMany": [MockFunction],
            "updateOne": [MockFunction],
          },
        },
      ],
    },
    "deleteMany": [MockFunction],
    "deleteOne": [MockFunction],
    "find": [MockFunction],
    "findById": [MockFunction],
    "findByIdAndDelete": [MockFunction],
    "findOne": [MockFunction],
    "findOneAndDelete": [MockFunction],
    "findOneAndUpdate": [MockFunction],
    "group": [MockFunction],
    "id": "mock-id",
    "insertMany": [MockFunction],
    "lean": [MockFunction],
    "limit": [MockFunction],
    "lookup": [MockFunction],
    "markModified": [MockFunction],
    "match": [MockFunction],
    "save": [MockFunction],
    "sort": [MockFunction],
    "toObject": [MockFunction],
    "update": [MockFunction],
    "updateMany": [MockFunction],
    "updateOne": [MockFunction],
  },
  {
    "_id": {
      "toString": [Function],
    },
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "at": [MockFunction],
    "bulkWrite": [MockFunction],
    "delete": [MockFunction] {
      "calls": [
        [
          undefined,
        ],
        [
          undefined,
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": {
            "_id": {
              "toString": [Function],
            },
            "aggregate": [MockFunction],
            "append": [MockFunction],
            "at": [MockFunction],
            "bulkWrite": [MockFunction],
            "delete": [MockFunction] {
              "calls": [
                [
                  undefined,
                ],
                [
                  undefined,
                ],
              ],
              "results": [Circular],
            },
            "deleteMany": [MockFunction],
            "deleteOne": [MockFunction],
            "find": [MockFunction],
            "findById": [MockFunction],
            "findByIdAndDelete": [MockFunction],
            "findOne": [MockFunction],
            "findOneAndDelete": [MockFunction],
            "findOneAndUpdate": [MockFunction],
            "group": [MockFunction],
            "id": "mock-id",
            "insertMany": [MockFunction],
            "lean": [MockFunction],
            "limit": [MockFunction],
            "lookup": [MockFunction],
            "markModified": [MockFunction],
            "match": [MockFunction],
            "save": [MockFunction],
            "sort": [MockFunction],
            "toObject": [MockFunction],
            "update": [MockFunction],
            "updateMany": [MockFunction],
            "updateOne": [MockFunction],
          },
        },
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "deleteMany": [MockFunction],
    "deleteOne": [MockFunction],
    "find": [MockFunction],
    "findById": [MockFunction],
    "findByIdAndDelete": [MockFunction],
    "findOne": [MockFunction],
    "findOneAndDelete": [MockFunction],
    "findOneAndUpdate": [MockFunction],
    "group": [MockFunction],
    "id": "mock-id",
    "insertMany": [MockFunction],
    "lean": [MockFunction],
    "limit": [MockFunction],
    "lookup": [MockFunction],
    "markModified": [MockFunction],
    "match": [MockFunction],
    "save": [MockFunction],
    "sort": [MockFunction],
    "toObject": [MockFunction],
    "update": [MockFunction],
    "updateMany": [MockFunction],
    "updateOne": [MockFunction],
  },
]
`;

exports[`services > release > deleteReleases > success bypass mirrored model check 1`] = `
[
  {
    "_id": {
      "toString": [Function],
    },
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "at": [MockFunction],
    "bulkWrite": [MockFunction],
    "delete": [MockFunction] {
      "calls": [
        [
          undefined,
        ],
        [
          undefined,
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
        {
          "type": "return",
          "value": {
            "_id": {
              "toString": [Function],
            },
            "aggregate": [MockFunction],
            "append": [MockFunction],
            "at": [MockFunction],
            "bulkWrite": [MockFunction],
            "delete": [MockFunction] {
              "calls": [
                [
                  undefined,
                ],
                [
                  undefined,
                ],
              ],
              "results": [Circular],
            },
            "deleteMany": [MockFunction],
            "deleteOne": [MockFunction],
            "find": [MockFunction],
            "findById": [MockFunction],
            "findByIdAndDelete": [MockFunction],
            "findOne": [MockFunction],
            "findOneAndDelete": [MockFunction],
            "findOneAndUpdate": [MockFunction],
            "group": [MockFunction],
            "id": "mock-id",
            "insertMany": [MockFunction],
            "lean": [MockFunction],
            "limit": [MockFunction],
            "lookup": [MockFunction],
            "markModified": [MockFunction],
            "match": [MockFunction],
            "save": [MockFunction],
            "sort": [MockFunction],
            "toObject": [MockFunction],
            "update": [MockFunction],
            "updateMany": [MockFunction],
            "updateOne": [MockFunction],
          },
        },
      ],
    },
    "deleteMany": [MockFunction],
    "deleteOne": [MockFunction],
    "find": [MockFunction],
    "findById": [MockFunction],
    "findByIdAndDelete": [MockFunction],
    "findOne": [MockFunction],
    "findOneAndDelete": [MockFunction],
    "findOneAndUpdate": [MockFunction],
    "group": [MockFunction],
    "id": "mock-id",
    "insertMany": [MockFunction],
    "lean": [MockFunction],
    "limit": [MockFunction],
    "lookup": [MockFunction],
    "markModified": [MockFunction],
    "match": [MockFunction],
    "save": [MockFunction],
    "sort": [MockFunction],
    "toObject": [MockFunction],
    "update": [MockFunction],
    "updateMany": [MockFunction],
    "updateOne": [MockFunction],
  },
  {
    "_id": {
      "toString": [Function],
    },
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "at": [MockFunction],
    "bulkWrite": [MockFunction],
    "delete": [MockFunction] {
      "calls": [
        [
          undefined,
        ],
        [
          undefined,
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": {
            "_id": {
              "toString": [Function],
            },
            "aggregate": [MockFunction],
            "append": [MockFunction],
            "at": [MockFunction],
            "bulkWrite": [MockFunction],
            "delete": [MockFunction] {
              "calls": [
                [
                  undefined,
                ],
                [
                  undefined,
                ],
              ],
              "results": [Circular],
            },
            "deleteMany": [MockFunction],
            "deleteOne": [MockFunction],
            "find": [MockFunction],
            "findById": [MockFunction],
            "findByIdAndDelete": [MockFunction],
            "findOne": [MockFunction],
            "findOneAndDelete": [MockFunction],
            "findOneAndUpdate": [MockFunction],
            "group": [MockFunction],
            "id": "mock-id",
            "insertMany": [MockFunction],
            "lean": [MockFunction],
            "limit": [MockFunction],
            "lookup": [MockFunction],
            "markModified": [MockFunction],
            "match": [MockFunction],
            "save": [MockFunction],
            "sort": [MockFunction],
            "toObject": [MockFunction],
            "update": [MockFunction],
            "updateMany": [MockFunction],
            "updateOne": [MockFunction],
          },
        },
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "deleteMany": [MockFunction],
    "deleteOne": [MockFunction],
    "find": [MockFunction],
    "findById": [MockFunction],
    "findByIdAndDelete": [MockFunction],
    "findOne": [MockFunction],
    "findOneAndDelete": [MockFunction],
    "findOneAndUpdate": [MockFunction],
    "group": [MockFunction],
    "id": "mock-id",
    "insertMany": [MockFunction],
    "lean": [MockFunction],
    "limit": [MockFunction],
    "lookup": [MockFunction],
    "markModified": [MockFunction],
    "match": [MockFunction],
    "save": [MockFunction],
    "sort": [MockFunction],
    "toObject": [MockFunction],
    "update": [MockFunction],
    "updateMany": [MockFunction],
    "updateOne": [MockFunction],
  },
]
`;

exports[`services > release > getModelReleases > convertSemverQueryToMongoQuery functions 1`] = `
[
  {
    "$and": [
      {
        "$or": [
          {
            "semver.major": {
              "$gte": 2,
            },
            "semver.minor": {
              "$gte": 2,
            },
            "semver.patch": {
              "$gte": 0,
            },
          },
          {
            "semver.major": {
              "$gt": 2,
            },
          },
          {
            "semver.major": {
              "$gte": 2,
            },
            "semver.minor": {
              "$gt": 2,
            },
          },
        ],
      },
      {
        "$or": [
          {
            "semver.major": {
              "$lte": 2,
            },
            "semver.minor": {
              "$lte": 3,
            },
            "semver.patch": {
              "$lt": 0,
            },
          },
          {
            "semver.major": {
              "$lt": 2,
            },
          },
          {
            "semver.major": {
              "$lte": 2,
            },
            "semver.minor": {
              "$lt": 3,
            },
          },
        ],
      },
    ],
    "modelId": "modelId",
  },
]
`;

exports[`services > release > getModelReleases > convertSemverQueryToMongoQuery functions with less than 1`] = `
[
  {
    "$and": [
      {
        "$or": [
          {
            "semver.major": {
              "$lte": 2,
            },
            "semver.minor": {
              "$lte": 2,
            },
            "semver.patch": {
              "$lt": 2,
            },
          },
          {
            "semver.major": {
              "$lt": 2,
            },
          },
          {
            "semver.major": {
              "$lte": 2,
            },
            "semver.minor": {
              "$lt": 2,
            },
          },
        ],
      },
    ],
    "modelId": "modelID",
  },
]
`;

exports[`services > release > getModelReleases > good 1`] = `
[
  {
    "modelId": "modelId",
  },
]
`;

exports[`services > release > getModelReleases > good 2`] = `
[
  {
    "updatedAt": -1,
  },
]
`;

exports[`services > release > getModelReleases > good 3`] = `
[
  {
    "as": "model",
    "foreignField": "id",
    "from": "v2_models",
    "localField": "modelId",
  },
]
`;

exports[`services > release > getModelReleases > good 4`] = `
[
  {
    "$set": {
      "model": {
        "$arrayElemAt": [
          "$model",
          0,
        ],
      },
    },
  },
]
`;
